# free-droid

./: .gitignore  CLAUDE.md  CONTEXT.md  GEMINI.md  PROJECT_BRIEF.md  README.md
docs/: finetune-naplo.md  free-droid.md  unsloth_utmutato.md
hf-space/: README.md  app.py  requirements.txt
robot/: README.md  pyproject.toml
robot/scripts/: README.md  _hw.py  lte_modem_test.py  mic_select.py  motor_test.py  servo_test.py  ultrasonic_test.py  usb_devices.py
robot/src/freedroid/: __init__.py
robot/src/freedroid/camera/: __init__.py
robot/src/freedroid/config/: __init__.py  gpio.py  settings.py
robot/src/freedroid/health/: __init__.py  checks.py  cli.py  model.py  probe.py  remediation.py  runner.py  safemode.py
robot/src/freedroid/llm/: __init__.py  language_guard.py
robot/src/freedroid/motion/: __init__.py  types.py
robot/src/freedroid/orchestrator/: __init__.py
robot/src/freedroid/rag/: chunker.py  corpus.py  retriever.py
robot/src/freedroid/safety/: __init__.py
robot/src/freedroid/tools/: __init__.py  handlers.py  parser.py
robot/src/freedroid/voice/: __init__.py
robot/tests/: conftest.py  test_config.py  test_grammar.py  test_health_checks.py  test_health_cli.py  test_health_model.py  test_health_remediation.py  test_health_runner.py  test_health_safemode.py  test_interfaces.py  test_language_guard.py  test_motion_types.py  test_parser_behaviour.py  test_phase4_hardware.py  test_probe.py  test_rag.py
training/: Modelfile  README.md  analyze_chat_log.py  benchmark_eredmeny_2026-06-25.md  benchmark_eredmeny_2026-06-26_3B-models.md  benchmark_eredmeny_2026-06-26_7-8B-models.md  benchmark_eredmeny_2026-06-30.md  benchmark_eredmeny_2026-06-30_RAG.md  benchmark_eredmeny_2026-06-30_llm-only.md  benchmark_eredmeny_2026-07-01.md  benchmark_eredmeny_2026-07-02.md  benchmark_eredmeny_2026-07-03.md  benchmark_eredmeny_2026-07-06.md  benchmark_eredmeny_2026-07-06_v5.md  benchmark_judged_2026-07-01.json  benchmark_judged_2026-07-01.md  benchmark_judged_2026-07-03.json  benchmark_judged_2026-07-03.md  benchmark_judged_2026-07-06.json  benchmark_judged_2026-07-06.md  benchmark_raw_2026-06-30.json  benchmark_raw_2026-07-01.json  benchmark_raw_2026-07-02.json  benchmark_raw_2026-07-03.json  benchmark_raw_2026-07-06.json  colab_finetune.ipynb  colab_finetune_7-8B.ipynb  colab_finetune_szabi.ipynb  colab_finetune_szabi_v3.ipynb  colab_finetune_szabi_v4.ipynb  colab_finetune_szabi_v5.ipynb  colab_finetune_szabi_v6.ipynb  colab_finetune_szabi_v7.ipynb  colab_finetune_szabi_v8.ipynb  config.py  ertekelo_sablon.md  finetune.py  (+14 more)
(+57 files in other folders)
